--- a/css/style.css
+++ b/css/style.css
@@ -22,40 +22,50 @@ strong {
   content: "Last";
   font-weight: bold;
 }
-input[type="text"] {
+input[type="text"],
+input[type="email"] {
   padding: 1rem;
   border: 1px solid black;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 input[type="email"] {
   border: 1px solid black;
   padding: 1rem;
 }
-.star {
-  position: relative;
-}
-.stars {
-  visibility: hidden;
-  font-size: 45px;
-  cursor: pointer;
-}
-.stars::before {
-  content: "\2606";
-  position: absolute;
 
-  visibility: visible;
-  top: -20px;
+.star-rating {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
 }
-.stars:checked::before {
+.radio-input {
+  position: fixed;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.radio-label {
+  cursor: pointer;
+  font-size: 0;
+  color: rgba(0, 0, 0, 0.2);
+}
+
+.radio-label:before {
   content: "\2605";
-  color: #ffc107;
-  position: absolute;
+  display: inline-block;
+  font-size: 3rem;
 }
-.starText {
-  margin-top: 1rem;
-  font-size: 1.2rem;
+.radio-input:checked ~ .radio-label {
+  color: gold;
 }
-.label-padding {
-  padding: 1.2vw;
+
+.radio-label:hover ~ .radio-label {
+  color: goldenrod;
+}
+
+.tableHeading {
+  margin-left: 1rem;
 }
 tr:nth-child(2n) {
   background-color: rgba(146, 143, 138, 0.329);
@@ -74,6 +84,14 @@ td {
 .table1,
 .table2 {
   margin: 4vw 0;
+
+  box-shadow: rgba(0, 0, 0, 0.7) 2px 5px 20px;
+  border-radius: 0.6em;
+}
+.table1:hover,
+.table2:hover {
+  box-shadow: rgb(235, 145, 61) 2px 5px 20px;
+  border-radius: 0.6em;
 }
 td:first-child {
   text-align: left;
@@ -85,13 +103,33 @@ input[type="radio"] {
 }
 #commentBox {
   width: 100%;
-  height: 20vh;
-  margin-bottom: 2vh;
-  border: 1px solid black;
+  height: 20vw;
+  margin-bottom: 2vw;
+  border: 1.2px solid black;
+  border-radius: 0.6em;
+  column-gap: 2em;
+  font-size: 1.5rem;
+}
+#commentBox:hover {
+  box-shadow: rgba(0, 0, 0, 0.7) 2px 5px 20px;
 }
 #button {
-  padding: 0.25rem;
-  width: 14vw;
+  padding: 1rem 0;
+  width: 12vw;
+  border: 1.2px solid black;
+  border-radius: 0.4em;
+  font-weight: bold;
+}
+#button:hover {
+  background-color: rgb(121, 207, 133);
+  color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+#button:active {
+  background-color: rgb(104, 144, 218);
+  color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.7) 2px 5px 20px;
 }
 .button-div {
   margin-bottom: 5vw;
@@ -108,6 +146,8 @@ input[type="radio"] {
 
   td::before {
     content: attr(data-title);
+    display: flex;
+    /* justify-content: left; */
   }
   td:first-child {
     font-size: 1rem;
@@ -119,5 +159,8 @@ input[type="radio"] {
   }
   td:first-child {
     font-size: 1.6rem;
+  }
+  #commentBox {
+    height: 30vh;
   }
 }
